objects/GCR__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Approved_Date__c</fullName>
        <label>Approval Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Submitted_Date__c</fullName>
        <label>Approval Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Attorney_Name__c</fullName>
        <formula>Assigned_to_Attorney__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Attorney Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to Attorney</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_Name__c</fullName>
        <label>Attorney Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bill Dummett</fullName>
                </value>
                <value>
                    <fullName>Carin Mastrolia</fullName>
                </value>
                <value>
                    <fullName>Catherine Ewings</fullName>
                </value>
                <value>
                    <fullName>Daniel Benavides</fullName>
                </value>
                <value>
                    <fullName>Devyn Rangiah</fullName>
                </value>
                <value>
                    <fullName>Elizabeth Vincent</fullName>
                </value>
                <value>
                    <fullName>Geoffrey Castronovo</fullName>
                </value>
                <value>
                    <fullName>Giselle Dalan</fullName>
                </value>
                <value>
                    <fullName>Harry Mak</fullName>
                </value>
                <value>
                    <fullName>Jaime Borja-Lascurain</fullName>
                </value>
                <value>
                    <fullName>Jason Klavon</fullName>
                </value>
                <value>
                    <fullName>Joe Hynes</fullName>
                </value>
                <value>
                    <fullName>John Garcia</fullName>
                </value>
                <value>
                    <fullName>Jyl Obozbekova</fullName>
                </value>
                <value>
                    <fullName>Laura Arsenault</fullName>
                </value>
                <value>
                    <fullName>Mark Rosine</fullName>
                </value>
                <value>
                    <fullName>Paul Collins</fullName>
                </value>
                <value>
                    <fullName>Reception Netherlands</fullName>
                </value>
                <value>
                    <fullName>Scott Wolfe</fullName>
                </value>
                <value>
                    <fullName>Shahzad Ahmad</fullName>
                </value>
                <value>
                    <fullName>Stephanie Meckler</fullName>
                </value>
                <value>
                    <fullName>Tamsen Bhachech</fullName>
                </value>
                <value>
                    <fullName>Tomasz Sztyber</fullName>
                </value>
                <value>
                    <fullName>Victor Buzinari</fullName>
                </value>
                <value>
                    <fullName>Vikram Sharma</fullName>
                </value>
                <value>
                    <fullName>Vincent Lim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCDB_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? CCDB - Store the Original CCDB for Amend requests 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <label>CCDB/Subscription</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Subscriptions related to the Account selected.</errorMessage>
            <filterItems>
                <field>Subscription__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Legal Contract Requests(New)</relationshipLabel>
        <relationshipName>Legal_Contract_Requests_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>GCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Due_Date__c</fullName>
        <label>Contract Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_File_Id__c</fullName>
        <label>Contract File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>New Contract</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Standard NDA/MSLSA</fullName>
                </value>
                <value>
                    <fullName>Self Service MSLA</fullName>
                </value>
                <value>
                    <fullName>Partner Contract</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>Submitted date for approval</description>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <label>Deal Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-100</fullName>
                </value>
                <value>
                    <fullName>101-500</fullName>
                </value>
                <value>
                    <fullName>501-2000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>31072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Legal Contract Requests(New)</relationshipLabel>
        <relationshipName>Legal_Contract_Requests_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_3__c</fullName>
        <label>Field 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_Content_Document_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCR Content Document Detail</label>
        <referenceTo>GCR_Content_Document_Detail__c</referenceTo>
        <relationshipName>GCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCR_Content_Document_Id__c</fullName>
        <label>GCR Content Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_DSR_for_a_Ramp_Extension__c</fullName>
        <label>Is this DSR for a Ramp Extension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Exceptions__c</fullName>
        <description>What it does? Stores the legal exceptions of the contract . Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <label>Legal Exceptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Deal_Review</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Group_Email__c</fullName>
        <label>Legal Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>License_Amount__c</fullName>
        <formula>Opportunity__r.License_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_To_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link To Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipName>GCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Action?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering_Details__c</fullName>
        <label>Offering Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Offering_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>GCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PR_Number__c</fullName>
        <label>PR Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipLabel>Legal Contract Requests</relationshipLabel>
        <relationshipName>Legal_Contract_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contract_Type_Other__c</fullName>
        <label>Partner Contract Type (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contract_Type__c</fullName>
        <label>Partner Contract Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master Partner</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Business Edition Premier Addendum</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner</fullName>
                </value>
                <value>
                    <fullName>Cloud Reseller</fullName>
                </value>
                <value>
                    <fullName>Referral Program Partner</fullName>
                </value>
                <value>
                    <fullName>SDK with Dist. Rights</fullName>
                </value>
                <value>
                    <fullName>SDK without Dist. Rights</fullName>
                </value>
                <value>
                    <fullName>Single Customer Maint Only Reseller</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Email_DL__c</fullName>
        <defaultValue>&apos;partners@genesys.com&apos;</defaultValue>
        <description>Stores partners@genesys.com email address.</description>
        <label>Partner Email DL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>if(contains(Account__r.RecordType__c ,&apos;Partner&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>GCRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ramp_Extension_Reason__c</fullName>
        <label>Select Ramp Extension Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Network Issues</fullName>
                </value>
                <value>
                    <fullName>Customer Delays</fullName>
                </value>
                <value>
                    <fullName>Feature Issue</fullName>
                </value>
                <value>
                    <fullName>Partner Issue</fullName>
                </value>
                <value>
                    <fullName>Edge Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Legal Region Contacts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC (Vincent Lim)</fullName>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LATAM (Jaime Borja)</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>North America (John Garcia/Tracey McAllister)</fullName>
                    <default>true</default>
                    <label>North America (John Garcia/Tracey McAllister)</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Data Privacy / Information Security</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GCR_Requesters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GCRs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-New</fullName>
                </value>
                <value>
                    <fullName>2-Assigned to Attorney</fullName>
                </value>
                <value>
                    <fullName>3-In Progress</fullName>
                </value>
                <value>
                    <fullName>4-Approved By Legal</fullName>
                </value>
                <value>
                    <fullName>5-Pending Finance Approval</fullName>
                </value>
                <value>
                    <fullName>6-Approved by Finance</fullName>
                </value>
                <value>
                    <fullName>7-Rejected by Finance</fullName>
                </value>
                <value>
                    <fullName>8-Metadata Complete</fullName>
                </value>
                <value>
                    <fullName>9-Signed by Genesys</fullName>
                </value>
                <value>
                    <fullName>10-Completed</fullName>
                </value>
                <value>
                    <fullName>12-Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Sub_Type__c</fullName>
        <description>What it does? Stores the Subscription Sub Type. Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <label>Subscription Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amend Existing Subscription</fullName>
                </value>
                <value>
                    <fullName>New Org &amp; Subscription</fullName>
                </value>
                <value>
                    <fullName>Renew Existing Subscription</fullName>
                </value>
                <value>
                    <fullName>Replace Existing Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>What it Does? CCDB - Store the value like Amend, New for PC Subscription Type 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Status__c</fullName>
        <formula>TEXT(Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <formula>Opportunity__r.Total_Annual_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Legal Contract Request</label>
    <listViews>
        <fullName>All_Request_1_New</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1-New</value>
        </filters>
        <label>All Request Status 1-New</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests</fullName>
        <columns>NAME</columns>
        <columns>Synopsis__c</columns>
        <columns>Account__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>New_Action__c</columns>
        <columns>Status__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests1</fullName>
        <columns>NAME</columns>
        <columns>Synopsis__c</columns>
        <columns>Account__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>10-Completed</value>
        </filters>
        <filters>
            <field>Attorney_Name__c</field>
            <operation>contains</operation>
            <value>John Garcia,Geoffrey Castronovo,Laura Arsenault,Stephanie Meckler,Tracey McA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>12-Cancelled</value>
        </filters>
        <label>All Requests(Not Completed)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests_1_New</fullName>
        <columns>NAME</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>New_Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contract_Type__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>North America (John Garcia/Tracey McAllister)</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1-New</value>
        </filters>
        <label>All North America Requests 1-New</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests_2_Assigned_to_Attorney</fullName>
        <columns>NAME</columns>
        <columns>Synopsis__c</columns>
        <columns>Account__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>New_Action__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Contract_Type__c</columns>
        <columns>CCDB_Subscription__c</columns>
        <columns>Partner_Contract_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureCloud</value>
        </filters>
        <label>All Requests  2-Assigned to Attorney</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests_4_Approved_By_Legal</fullName>
        <columns>NAME</columns>
        <columns>Synopsis__c</columns>
        <columns>Account__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>New_Action__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>4-Approved By Legal</value>
        </filters>
        <filters>
            <field>Attorney_Name__c</field>
            <operation>contains</operation>
            <value>john</value>
        </filters>
        <label>All Requests 4-Approved By Legal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests_5_Pending_Finance_Approval</fullName>
        <columns>NAME</columns>
        <columns>Synopsis__c</columns>
        <columns>Account__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>New_Action__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>5-Pending Finance Approval</value>
        </filters>
        <label>All Requests 5-Pending Finance Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests_6_Approved_by_Finance</fullName>
        <columns>NAME</columns>
        <columns>Synopsis__c</columns>
        <columns>Account__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Assigned_to_Attorney__c</columns>
        <columns>New_Action__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>6-Approved by Finance</value>
        </filters>
        <label>All Requests 6-Approved by Finance</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Legal Request -{000000}</displayFormat>
        <label>Legal Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Contract Requests(New)</pluralLabel>
    <recordTypes>
        <fullName>Purchasing</fullName>
        <active>true</active>
        <label>Purchasing</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevention_of_changing_fields</fullName>
        <active>true</active>
        <description>If GCR__c.Status__c is ‘10-Completed’, user cannot modify Opportunity, CCDB or Subscription Sub Type fields under GCR__c</description>
        <errorConditionFormula>AND( TEXT(Status__c) = &apos;10-Completed&apos;, OR(ISCHANGED( Opportunity__c ) ,ISCHANGED( CCDB_Subscription__c ), ISCHANGED( Subscription_Sub_Type__c )),TEXT(Offering_Type__c) = &apos;PureCloud&apos;)</errorConditionFormula>
        <errorMessage>Opportunity,CCDB/Subscription or Subscription Sub Type cannot be changed when status = &apos;10-Completed&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_and_Attorney_name_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(Attorney_Name__c) ) ,
OR( 
ISPICKVAL( Status__c , &quot;Executed&quot;),
ISPICKVAL( Status__c , &quot;Completed&quot;),
ISPICKVAL( Status__c , &quot;Approved&quot;)
)
)</errorConditionFormula>
        <errorMessage>Status can not be changed to Executed/Completed/Pending Approval/Approved when no attorney is assigned</errorMessage>
    </validationRules>
</CustomObject>